Test results page table

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -185,6 +185,7 @@ table {
 }
 td,
 th {
+  text-align: center;
   padding: 0;
 }
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
