--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -183,11 +183,16 @@ table {
   border-spacing: 0;
   border-collapse: collapse;
 }
-td,
+td {
+  padding:5px;
+
+
+}
 th {
   text-align: center;
-  padding: 0;
+  padding: 5px;
 }
+
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
   *,
@@ -222,7 +227,7 @@ th {
   thead {
     display: table-header-group;
   }
-  tr,
+  tr:hover {background-color: #f5f5f5};
   img {
     page-break-inside: avoid;
   }
