--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -28,7 +28,7 @@ nav{
   font-family: "goudy-old-style",serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 20px;
   background-color: #522D80;
 }
 section,
@@ -226,7 +226,7 @@ th {
   a,
   a:visited {
     text-decoration: underline;
-  }
+  }ls
   a[href]:after {
     content: " (" attr(href) ")";
   }
@@ -269,8 +269,8 @@ th {
     font-family: "goudy-old-style",serif;
     font-style: normal;
     font-weight: 400;
-
-     background-color: #522D80;
+    font-size: 24px;
+    background-color: #522D80;
   }
   .btn > .caret,
   .dropup > .btn > .caret {
@@ -4326,7 +4326,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   float: left;
   height: 50px;
   padding: 15px 15px;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 20px;
 }
 .navbar-brand:hover,
@@ -4417,9 +4417,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-form {
   padding: 10px 15px;
-  margin-top: 8px;
+  margin-top: 1px;
   margin-right: -15px;
-  margin-bottom: 8px;
+  margin-bottom: 1px;
   margin-left: -15px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
@@ -4430,6 +4430,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-form .form-group {
     display: inline-block;
     margin-bottom: 0;
+    margin-top:0;
     vertical-align: middle;
   }
   .navbar-form .form-control {
@@ -4478,7 +4479,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (max-width: 767px) {
   .navbar-form .form-group {
-    margin-bottom: 5px;
+    margin-bottom: 1px;
   }
   .navbar-form .form-group:last-child {
     margin-bottom: 0;
@@ -4503,8 +4504,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
   margin-bottom: 0;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-top-left-radius: 1px;
+  border-top-right-radius: 1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
